# EvorBrain

./: .env.example  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  APP_VERIFICATION_REPORT.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  PLANNING.md  REACT_SETUP.md  README.md  TASKS.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  run-claude.bat  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  typedoc.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tsconfig.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  filesystem.json
src-tauri/data/: evorbrain.db-shm  evorbrain.db-wal
src-tauri/migrations/: 0001_initial_schema.sql
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs
src-tauri/src/commands/: goals.rs  life_areas.rs  logging.rs  mod.rs  notes.rs  projects.rs  repository.rs  tasks.rs
src-tauri/src/database/: connection.rs  error.rs  migrations.rs  mod.rs  path_security.rs  utils.rs
src-tauri/src/database/models/: goal.rs  life_area.rs  mod.rs  project.rs  task.rs
src-tauri/src/database/queries/: life_areas.rs  mod.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/db/migrations/: README.md  all.rs  commands.rs  mod.rs
src-tauri/src/db/migrations/sql/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_add_tags.down.sql  002_add_tags.up.sql
src-tauri/src/validation/: goal.rs  life_area.rs  mod.rs  project.rs  task.rs
(+229 files in other folders)
